<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/cf_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                android:textColor="#666666"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/cf_wifi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Manual"
                android:textColor="#666666"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#99999999" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cf_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps"
                android:textColor="#666666"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/cf_gps_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Manual"
                android:textColor="#666666"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#99999999" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cf_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth"
                android:textColor="#666666"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/cf_bluetooth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Manual"
                android:textColor="#666666"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#99999999" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cf_sync_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_date"
                android:textColor="#666666"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/cf_sync_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Manual"
                android:textColor="#666666"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#99999999" />
        </LinearLayout>

        
    </LinearLayout>

</ScrollView>