<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/sf_ring_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ring_mode"
                android:textColor="#666666"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/sf_ring_mode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Manual"
                android:textColor="#666666"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#99999999" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sf_ring_volumn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ring_volumn"
                android:textColor="#666666"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/sf_ring_volumn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Manual"
                android:textColor="#666666"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#99999999" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sf_notification_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_mode"
                android:textColor="#666666"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/sf_notification_mode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Manual"
                android:textColor="#666666"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#99999999" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sf_notification_volumn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_volumn"
                android:textColor="#666666"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/sf_notification_volumn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Manual"
                android:textColor="#666666"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#99999999" />
        </LinearLayout>

        
    </LinearLayout>

</ScrollView>